[gd_scene load_steps=2 format=3 uid="uid://storyui001"]

[ext_resource type="Script" path="res://scripts/ui/StoryUI.gd" id="1_story"]

[node name="StoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_story")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Portraits" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="TextureRect" parent="Portraits"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -600.0
offset_right = 400.0
grow_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="Center" type="TextureRect" parent="Portraits"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -600.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="Right" type="TextureRect" parent="Portraits"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -600.0
grow_horizontal = 0
grow_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpeakerLabel" type="Label" parent="DialogueBox"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
theme_override_font_sizes/normal_font_size = 18
text = "Dialogue text goes here..."

[node name="LogButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Log"

[connection signal="pressed" from="LogButton" to="." method="_on_log_button_pressed"]
